# Foundation-Chronicle

./: .gitignore  README.md  package-lock.json  package.json
.claude/: launch.json
.emergent/: emergent.yml
activity-agent/: Cargo.toml
activity-agent/src/: capture.rs  main.rs
db/: docker-compose.yml  drizzle.config.ts  episode.integration.test.mjs  package-lock.json  package.json  schema.ts
db/init/: 00-init.sql
db/migrations/: 0000_romantic_blizzard.sql  0001_clever_impossible_man.sql  0002_gigantic_jean_grey.sql  0003_keen_phantom_reporter.sql  0004_optimal_peter_quill.sql  0005_naive_the_captain.sql  0006_brief_overlord.sql  0007_vengeful_big_bertha.sql  0008_spicy_violations.sql  0009_flimsy_kulan_gath.sql  0010_melted_mattie_franklin.sql  0011_small_shinobi_shaw.sql  0012_certain_rocket_raccoon.sql  0013_panoramic_purifiers.sql  0014_add_episode_layer.sql  (+4 more)
docs/: ChatGPT-importer-review-en-Gemini-voorbereiding.md  chronicle-lumina-analyse.md  hermes-chronicle-integratie.md  kernprincipe.md
extension/: README.md  manifest.json  popup.html  popup.js
frontend/: craco.config.js  package-lock.json  package.json  tailwind.config.js
memory/: PRD.md  chronicle_memory_provider.py  gaia_server.py  pyproject.toml
scripts/: check-shared-logic-sync.js
server/: _debug_types.js  activityAgentConfig.js  activityAgentManager.js  attachmentRestoreSessions.js  attachmentRestoreSessions.test.js  attachmentsStore.js  attachmentsStore.test.js  auth.js  captureActivityLog.js  chatgptImportManager.js  cleanup_uia_junk.js  clear_data_postgres.js  clear_data_puremind_sqlite.js  contentHash.js  db.js  embedding.js  episodePolicy.js  episodePolicy.test.js  epistemicPolicy.js  epistemicPolicy.test.js  gaiaProactiveTopics.js  inboxStore.js  index.js  jobs.js  mcpServer.js  mcpServer.test.js  memoryExport.js  memoryExport.test.js  memoryIntegrity.js  memoryIntegrity.test.js  memoryMaintenance.js  memoryMaintenance.test.js  memoryRestore.js  memoryRestore.test.js  package-lock.json  package.json  personaHelper.js  providerConversationId.js  purememoryConfig.js  purememoryIngest.js  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: capture_redact.rs  clipboard_capture.rs  lib.rs  ocr_capture.rs  uia_capture.rs
test_reports/: iteration_1.json  iteration_2.json
(+2747 files in other folders)
