[package]
name = "activity-agent"
version = "0.1.0"
edition = "2021"
description = "Native Windows foreground-window/UI-Automation capture agent for Chronicle, spawned by server/activityAgentManager.js"

[[bin]]
name = "activity-agent"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
time = { version = "0.3", features = ["formatting", "parsing"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_UI_Accessibility",
  "Win32_UI_WindowsAndMessaging",
]

[profile.release]
opt-level = "s"
strip = true
